# Foresight

./: .env.template  .gitignore  DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART_TESTING.md  README.md  REALTIME_GUIDE.md  REALTIME_IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  TEST_RESULTS_EXPECTED.md  docker-compose.yml  pyproject.toml  requirements.txt  seed.py
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
api/: Dockerfile  dependencies.py  feature_store.py  main.py
api/connections/: __init__.py  testers.py
api/data_import/: __init__.py  engine.py  importers.py
api/models/: data_source.py  schemas.py
api/pipeline/: __init__.py  feature_engineering.py
api/routers/: alerts.py  assets.py  auth.py  data_import.py  data_sources.py  predictions.py  realtime.py  reports.py  rules.py  streaming_ws.py
batch/dags/: daily_feature_pipeline.py  daily_scoring_dag.py  weekly_model_retraining.py  weekly_retraining_dag.py
batch/jobs/: feature_engineering.py
common/: __init__.py  config.py  logging_config.py  models.py
dashboard/: .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/public/: realtime_test.html
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts  endpoints.ts
dashboard/src/hooks/: useAlerts.ts  useAssets.ts  useDataSources.ts  useFleetSummary.ts  useTrends.ts
dashboard/src/pages/: Alerts.tsx  Assets.tsx  (+8 more)
infrastructure/db/: base.py  hive_ddl.py
infrastructure/migrations/: alembic.ini  env.py  script.py.mako
ingestion/: asset_suite_connector.py  minio_writer.py  sap_connector.py  sensor_ingestor.py  sensor_simulator.py
ml/models/: predictor_30d.joblib  predictor_7d.joblib
ml/serving/: predictor.py
ml/training/: train.py
scripts/: convert_cmapss.py  full_test_pipeline.sh  quick_test.sh  seed_data.py  start.sh  test_api.py
streaming/: Dockerfile  aggregations.py  alert_engine.py  kafka_consumer.py  mongodb_sink.py  rules_loader.py
tests/: smoke_test.py
tests/load/: load_test.js
tests/unit/: test_db.py
(+39 files in other folders)
